--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2018"
 
 [dependencies]
 select = "*"
-reqwest = "*"
+reqwest = { version = "0.10", features = ["json"] }
+tokio = { version = "0.2", features = ["full", "macros"] }
